# GenMan

./: .coveragerc  .flake8  .gitignore  Dockerfile  Makefile  alembic.ini  pyproject.toml  pytest.gh.ini  pytest.ini  readme.md
.github/workflows/: acceptance.yml  cd.yml  dev-build-push.yml  prod-build-push.yml  snyk_check.yml
alembic/mysql/: env.py
alembic/postgresql/: env.py
src/: main.py
src/adapters/: ai_api.py  embedder_client.py  summarizer_client.py
src/api/: api.py
src/builders/: prompts.py
src/chain/: chain.py
src/concerns/: authoring.py  moderation.py
src/contracts/: cache.py  chain.py  embedder.py  events.py  storage.py  summarizer.py
src/core/: config.py  containers.py
src/data/: util.py
src/exceptions/: ai_api.py  base.py  http.py  policies.py  transformations.py
src/jobs/: embed_job.py
src/middlewares/: collect_audit_data_middleware.py
src/models/: semantic_search_item.py  usage_log.py
src/proto/: embed-job-status.proto  embed-jobs.proto  embed_job_status_pb2.py  embed_jobs_pb2.py
src/repositories/: assets.py  audit.py
src/services/: authoring.py  moderation.py  semantic_search.py  slack.py
src/util/: cache.py  storage.py  tags_parser.py
tests/: conftest.py  utils.py
tests/__factories__/: configs.py  prompt_templates.py  responses.py
tests/__stubs__/: article_kb_templates.py  html_templates.py  prompt_templates.py  semantic_search.py  summarizer_config_template.py  tree_templates.py
tests/adapters/: test_ai_api.py  test_embedder_client.py
tests/builders/: test_prompts.py
tests/chain/: chain.py
(+99 files in other folders)
