[tool.poetry]
name = "ai-service"
version = "0.1.0"
description = "Zingtree - AI Service"
authors = ["Zingtree"]
readme = "README.md"
packages = [{include = "ai_service"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.109.1"
uvicorn = {extras = ["standard"], version = "^0.21.0"}
pydantic = "^1.10.6"
openai = "^0.27.2"
boto3 = "^1.28.59"
botocore= "^1.31.59"
redis = "^4.5.3"
anyio = "^3.6.2"
dependency-injector = "^4.41.0"
gunicorn = "^22.0.0"
slack-sdk = "^3.20.2"
tenacity = "^8.2.2"
beautifulsoup4 = "^4.12.2"
alembic = "^1.10.2"
sqlalchemy = "^2.0.9"
pgvector = "^0.1.8"
psycopg2-binary = "^2.9.6"
sagemaker = "^2.177.1"
cohere-sagemaker = "^0.6.3"
httpx = "^0.23.3"
confluent-kafka = "^2.3.0"
asyncio = "^3.4.3"
pytest-asyncio = "^0.21.1"
pymysql = "^1.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.5.0"
flake8 = "^7.0.0"
mock = "^5.1.0"
pytest-mock = "^3.12.0"
pytest-env = "^1.1.3"
fakeredis = "^2.21.0"
isort = "^5.13.2"
pytest-asyncio = "^0.21.0"
moto = {extras = ["s3"], version = "^5.0.1"}
debugpy = "^1.8.1"
factory-boy = "^3.3.0"
pytest-sugar = "^1.0.0"
pytest-timeout = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79